fix(sso): add `better-call` peerDeps (#7676)

--- a/packages/sso/package.json
+++ b/packages/sso/package.json
@@ -80,6 +80,7 @@
   },
   "peerDependencies": {
     "@better-auth/utils": "catalog:",
+    "better-call": "catalog:",
     "better-auth": "workspace:*"
   }
 }
