--- a/packages/stripe/package.json
+++ b/packages/stripe/package.json
@@ -60,11 +60,13 @@
   "peerDependencies": {
     "@better-auth/core": "workspace:*",
     "better-auth": "workspace:*",
+    "better-call": "catalog:",
     "stripe": "^18 || ^19 || ^20"
   },
   "devDependencies": {
     "@better-auth/core": "workspace:*",
     "better-auth": "workspace:*",
+    "better-call": "catalog:",
     "stripe": "^20.0.0",
     "tsdown": "catalog:"
   }
