--- a/demo/nextjs/package.json
+++ b/demo/nextjs/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@better-auth/dash": "^0.1.6",
+    "@better-auth/electron": "workspace:*",
+    "@better-auth/infra": "^0.1.7",
     "@better-auth/oauth-provider": "workspace:*",
     "@better-auth/passkey": "workspace:*",
     "@better-auth/scim": "workspace:^",
